# rust-microkernel

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/arch_aarch64_rpi/: Cargo.toml  linker.ld
crates/arch_aarch64_rpi/src/: boot.S  main.rs
crates/arch_aarch64_virt/: Cargo.toml  build.rs  linker.ld
crates/arch_aarch64_virt/src/: boot.S  main.rs  mem.rs  preempt.rs  timer.rs
crates/arch_x86_64/: Cargo.toml
crates/arch_x86_64/src/: main.rs
crates/hal/: Cargo.toml
crates/hal/src/: arch.rs  lib.rs  log.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: ipc.rs  lib.rs  sched.rs
docs/: DEVELOPMENT_SETUP.md  REFERENCES.md  RELEASE_GUIDE.md  RELEASE_NOTES.md
scripts/: build-aarch64-virt.sh  build-rpi.ps1  build-rpi.sh  build-x86.ps1  build-x86.sh  run-aarch64-virt.sh  run-x86.ps1  run-x86.sh  setup.ps1  setup.sh
xtask/: Cargo.toml
xtask/src/: main.rs
