[package]
name = "arch_aarch64_virt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "arch_aarch64_virt"
path = "src/main.rs"

[features]
default = ["demo-memory"]
demo-ipc = []
demo-timer = []
demo-preempt = []
demo-memory = []

[dependencies]
kernel = { path = "../kernel" }
hal = { path = "../hal" }


