[package]
name = "arch_x86_64"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "arch_x86_64"
path = "src/main.rs"

[dependencies]
kernel = { path = "../kernel" }
hal = { path = "../hal" }
spin.workspace = true
uart_16550.workspace = true
bootloader_api = "0.11"


